--- a/service/package.json
+++ b/service/package.json
@@ -11,9 +11,10 @@
   "author": "Andrei Leonte",
   "license": "ISC",
   "devDependencies": {
-    "fastify-plugin": "^5.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.9.0",
+    "fastify-plugin": "^5.0.1",
     "pino-pretty": "^13.0.0",
     "typescript": "^5.6.3"
   },
@@ -22,6 +23,7 @@
     "bcrypt": "^5.1.1",
     "fastify": "^5.1.0",
     "fastify-swagger": "^5.1.1",
+    "luxon": "^3.5.0",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0"
