--- a/service/package.json
+++ b/service/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
     "bcrypt": "^5.1.1",
     "fastify": "^5.1.0",
