--- a/service/package.json
+++ b/service/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "test",
     "build": "tsc -v && tsc -w",
-    "start": "node --watch bin/index.js"
+    "start": "node --watch bin/index.js",
+    "dev": "env-cmd -f .env node --inspect=9229 --watch bin/index.js"
   },
   "author": "Andrei Leonte",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
     "bcrypt": "^5.1.1",
+    "env-cmd": "^10.1.0",
     "fastify": "^5.1.0",
     "fastify-swagger": "^5.1.1",
     "luxon": "^3.5.0",
