--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.2",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/axios": "^0.9.36",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
