--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "^7.0.2",
     "axios": "^1.7.9",
     "isbot": "^5.1.17",
+    "motion": "^12.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.0.2"
