--- a/services/flag-states/package.json
+++ b/services/flag-states/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "plain-flags-management",
+  "name": "plain-flags-states",
   "version": "1.0.0",
-  "description": "Plain flags management service",
+  "description": "Plain flags state service",
   "main": "bin/index.js",
   "scripts": {
     "test": "test",
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
-    "@fastify/jwt": "^9.0.1",
     "bcrypt": "^5.1.1",
     "env-cmd": "^10.1.0",
     "fastify": "^5.1.0",
