--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,25 @@ services:
       - SERVICE_PORT=5000
       - APIKEY=ersafoi89a0ww3n8yrt493ew84yqjwd34y8r09
       - STALE_FLAG_DAYS=2
+    volumes:
+      - db-data:/data/:rw
+
+  flag-states:
+    build: ./services/flag-states
+    ports:
+      - 5001:5001
+    environment:
+      - SERVICE_PORT=5001
+      - APIKEY=ersafoi89a0ww3n8yrt493ew84yqjwd34y8r09
+    volumes:
+      - db-data:/data:ro
+
+  flags-dashboard:
+    build: ./dashboard
+    ports:
+      - 3000:3000
+    environment:
+      - VITE_API_URL=http://flag-management/api
+
+volumes:
+  db-data:
