--- a/services/flag-management/package.json
+++ b/services/flag-management/package.json
@@ -8,8 +8,14 @@
     "build": "tsc -v && tsc -w",
     "build-prod": "tsc",
     "start": "node --watch bin/index.js",
-    "start-prod": "node bin/index.js",
-    "dev": "env-cmd -f .env node --inspect=9229 --watch bin/index.js"
+    "start-prod": "NODE_ENV=production node bin/index.js",
+    "dev": "env-cmd -f .env node --inspect=9229 --watch bin/index.js",
+
+    "typeorm": "NODE_ENV=migration typeorm-ts-node-commonjs",
+    "typeorm:generate": "npm run typeorm migration:generate -- --dataSource ./src/data.ts",
+    "typeorm:create": "npm run typeorm migration:create -- --dataSource ./src/data.ts",
+    "typeorm:migrate": "npm run typeorm migration:run -- --dataSource ./src/data.ts",
+    "typeorm:revert": "npm run typeorm migration:revert -- --dataSource ./src/data.ts"
   },
   "author": "Andrei Leonte",
   "license": "ISC",
@@ -19,6 +25,7 @@
     "@types/node": "^22.9.0",
     "fastify-plugin": "^5.0.1",
     "pino-pretty": "^13.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
