--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,11 @@ services:
       - JWT_SIGNING_SECRET=eilafefyr8q093478ryvnbchul8934rcnlaa8ry
       - SERVICE_PORT=5000
       - APIKEY=ersafoi89a0ww3n8yrt493ew84yqjwd34y8r09
-      - STALE_FLAG_DAYS=2
+      - STALE_FLAG_DAYS=20
+      - SUPERADMIN_EMAIL=boss@plainflags.com
+      - SUPERADMIN_PASSWORD=password
+      - DEFAULT_USER_PASSWORD=stop00
+      - DISABLE_USER_REGISTRATION=true
     volumes:
       - db-data:/data/:rw
 
@@ -36,6 +40,7 @@ services:
       - 3000:3000
     environment:
       - VITE_API_URL=http://flag-management/api
+      - VITE_DISABLE_USER_REGISTRATION=true
 
 volumes:
   db-data:
