--- a/services/flag-management/package.json
+++ b/services/flag-management/package.json
@@ -10,7 +10,6 @@
     "start": "node --watch bin/index.js",
     "start-prod": "NODE_ENV=production node bin/index.js",
     "dev": "env-cmd -f .env node --inspect=9229 --watch bin/index.js",
-
     "typeorm": "NODE_ENV=migration typeorm-ts-node-commonjs",
     "typeorm:generate": "npm run typeorm migration:generate -- --dataSource ./src/data.ts",
     "typeorm:create": "npm run typeorm migration:create -- --dataSource ./src/data.ts",
@@ -31,12 +30,14 @@
   "dependencies": {
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
+    "@types/ws": "^8.5.14",
     "bcrypt": "^5.1.1",
     "env-cmd": "^10.1.0",
     "fastify": "^5.1.0",
     "luxon": "^3.5.0",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "ws": "^8.18.0"
   }
 }
