--- a/services/flag-states/package.json
+++ b/services/flag-states/package.json
@@ -23,6 +23,7 @@
     "@types/ws": "^8.5.14",
     "env-cmd": "^10.1.0",
     "fastify": "^5.1.0",
+    "reconnecting-websocket": "^4.4.0",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
