--- a/sdk/node/package.json
+++ b/sdk/node/package.json
@@ -22,6 +22,9 @@
     "@types/node": "^22.10.0"
   },
   "dependencies": {
-    "axios": "^1.7.8"
+    "@types/ws": "^8.5.14",
+    "axios": "^1.7.8",
+    "reconnecting-websocket": "^4.4.0",
+    "ws": "^8.18.0"
   }
 }
