--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - SUPERADMIN_EMAIL=boss@plainflags.com
       - SUPERADMIN_PASSWORD=password
       - DEFAULT_USER_PASSWORD=stop00
+      - WS_SERVER_PORT=8080
       # - DISABLE_USER_REGISTRATION=true
     volumes:
       - db-data:/data/:rw
@@ -31,6 +32,7 @@ services:
       - SERVICE_PORT=5001
       - APIKEY=ersafoi89a0ww3n8yrt493ew84yqjwd34y8r09
       - MANAGEMENT_WS=ws://flag-management:8080
+      - WS_SERVER_PORT=8081
     volumes:
       - db-data:/data:ro
     depends_on:
@@ -44,7 +46,7 @@ services:
       - 3000:3000
     environment:
       - VITE_API_URL=http://flag-management/api
-      - VITE_DISABLE_USER_REGISTRATION=true
+      # - VITE_DISABLE_USER_REGISTRATION=true
 
 volumes:
   db-data:
