Broadcast state at connection; net stability stress test

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ pid /var/run/nginx.pid;
 
 
 events {
-    worker_connections 15000;
+    worker_connections 15000; # I intentionally set this high for stress tests
 }
 
 http {
