--- a/services/flag-management/package.json
+++ b/services/flag-management/package.json
@@ -10,7 +10,7 @@
     "start": "node --watch bin/index.js",
     "start-prod": "NODE_ENV=production node bin/index.js",
     "dev": "env-cmd -f .env node --inspect=9229 --watch bin/index.js",
-    "typeorm": "NODE_ENV=migration typeorm-ts-node-commonjs",
+    "typeorm": "NODE_ENV=migration env-cmd -f .env typeorm-ts-node-commonjs",
     "typeorm:generate": "npm run typeorm migration:generate -- --dataSource ./src/data.ts",
     "typeorm:create": "npm run typeorm migration:create -- --dataSource ./src/data.ts",
     "typeorm:migrate": "npm run typeorm migration:run -- --dataSource ./src/data.ts",
@@ -38,6 +38,7 @@
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
+    "upath": "^2.0.1",
     "ws": "^8.18.0"
   }
 }
