--- a/services/flag-states/package.json
+++ b/services/flag-states/package.json
@@ -27,6 +27,7 @@
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
+    "upath": "^2.0.1",
     "ws": "^8.18.0"
   }
 }
