--- a/services/flag-states/package.json
+++ b/services/flag-states/package.json
@@ -20,14 +20,11 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
-    "@types/ws": "^8.5.14",
     "env-cmd": "^10.1.0",
     "fastify": "^5.1.0",
-    "reconnecting-websocket": "^4.4.0",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
-    "upath": "^2.0.1",
-    "ws": "^8.18.0"
+    "upath": "^2.0.1"
   }
 }
