--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashboard",
-  "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "build": "NODE_ENV=production react-router build",
