Readme for node sdk

--- a/sdk/node/package.json
+++ b/sdk/node/package.json
@@ -13,7 +13,8 @@
     "plain",
     "feature",
     "flag",
-    "toggle"
+    "toggle",
+    "free"
   ],
   "author": "Andrei Leonte",
   "license": "ISC",
