--- a/services/flag-management/.env.template
+++ b/services/flag-management/.env.template
@@ -1,4 +1,5 @@
 DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migration in development mode
+JWT_SIGNING_SECRET_FILE=./jwt.secret.txt    # If set, it overrides JWT_SIGNING_SECRET.
 JWT_SIGNING_SECRET=
 SERVICE_PORT=5000
 APIKEY=
