--- a/services/flag-management/.env.template
+++ b/services/flag-management/.env.template
@@ -1,10 +1,12 @@
 DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migration in development mode
-JWT_SIGNING_SECRET_FILE=./jwt.secret.txt    # If set, it overrides JWT_SIGNING_SECRET.
+JWT_SIGNING_SECRET_FILE=    # If set, it overrides JWT_SIGNING_SECRET.
 JWT_SIGNING_SECRET=
 SERVICE_PORT=5000
 APIKEY=
 STALE_FLAG_DAYS=2
 SUPERADMIN_EMAIL=
 SUPERADMIN_PASSWORD=
+SUPERADMIN_PASSWORD_FILE=    # If set, it overrides SUPERADMIN_PASSWORD.
 DEFAULT_USER_PASSWORD=
+DEFAULT_USER_PASSWORD_FILE=    # If set, it overrides DEFAULT_USER_PASSWORD.
 # DISABLE_USER_REGISTRATION=true
