Edit constraint values endpoint

--- a/services/flag-states/.env.template
+++ b/services/flag-states/.env.template
@@ -1,3 +1,4 @@
 DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migration in development mode
 SERVICE_PORT=5001
 APIKEY=
+APIKEY_FILE=../../.secrets/apikey.states.txt    # if set, it overrides APIKEY.
