--- a/services/flag-management/.env.template
+++ b/services/flag-management/.env.template
@@ -1,9 +1,19 @@
+DATABASE_TYPE=pg    # Omit this to use the default SQLite
+DATABASE_HOST=localhost # PostgreSQL only
+DATABASE_PORT=5432 # PostgreSQL only
+DATABASE_NAME=plainflags # PostgreSQL only
+DATABASE_USER=plainflags # PostgreSQL only
+DATABASE_PASSWORD= # PostgreSQL only
+DATABASE_PASSWORD_FILE=../../.secrets/password.pg.txt # If set, overrides DATABASE_PASSWORD.
+
+# Only for SQLite database type, see at the top.
 DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migration in development mode
+
 JWT_SIGNING_SECRET_FILE=../../.secrets/jwt.secret.txt    # If set, it overrides JWT_SIGNING_SECRET.
 JWT_SIGNING_SECRET=
 SERVICE_PORT=5000
 APIKEY=
-APIKEY_FILE=../../.secrets/apikey.mgt.txt # if set, it overrides APIKEY.
+APIKEY_FILE=../../.secrets/apikey.mgt.txt # If set, it overrides APIKEY.
 STALE_FLAG_DAYS=2
 SUPERADMIN_EMAIL=
 SUPERADMIN_PASSWORD=
