--- a/services/flag-management/Dockerfile
+++ b/services/flag-management/Dockerfile
@@ -9,6 +9,7 @@ COPY migrations migrations
 
 RUN npm ci
 RUN npm run build-prod
-RUN npm run typeorm:migrate
 
-CMD ["npm", "run", "start-prod"]
+ENTRYPOINT \
+    npm run typeorm:migrate && \
+    npm run start-prod
