--- a/services/flag-states/.env.template
+++ b/services/flag-states/.env.template
@@ -1,4 +1,14 @@
+DATABASE_TYPE=pg    # Omit this to use the default SQLite
+DATABASE_HOST=localhost # PostgreSQL only
+DATABASE_PORT=5432 # PostgreSQL only
+DATABASE_NAME=plainflags # PostgreSQL only
+DATABASE_USER=plainflags # PostgreSQL only
+DATABASE_PASSWORD= # PostgreSQL only
+DATABASE_PASSWORD_FILE=../../.secrets/password.pg.txt # If set, overrides DATABASE_PASSWORD.
+
+# Only for SQLite database type, see at the top.
 DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migration in development mode
+
 SERVICE_PORT=5001
 APIKEY=
 APIKEY_FILE=../../.secrets/apikey.states.txt    # if set, it overrides APIKEY.
