Flag creation in transaction with history recording

--- a/services/flag-management/package.json
+++ b/services/flag-management/package.json
@@ -37,11 +37,11 @@
     "@fastify/jwt": "^9.0.1",
     "@types/ws": "^8.5.14",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.9.1",
     "env-cmd": "^10.1.0",
     "fastify": "^5.1.0",
     "luxon": "^3.5.0",
     "pg": "^8.14.1",
-    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.22",
     "typeorm-naming-strategies": "^4.1.0",
     "upath": "^2.0.1",
