--- a/services/flag-states/package.json
+++ b/services/flag-states/package.json
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "better-sqlite3": "^11.9.1",
     "env-cmd": "^10.1.0",
     "fastify": "^5.1.0",
     "pg": "^8.14.1",
-    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.22",
     "typeorm-naming-strategies": "^4.1.0",
     "upath": "^2.0.1"
