--- a/services/flag-states/.env.template
+++ b/services/flag-states/.env.template
@@ -5,6 +5,7 @@ DATABASE_NAME=plainflags # PostgreSQL only
 DATABASE_USER=plainflags # PostgreSQL only
 DATABASE_PASSWORD= # PostgreSQL only
 DATABASE_PASSWORD_FILE=../../.secrets/password.pg.txt # If set, overrides DATABASE_PASSWORD.
+DATABASE_POOL_SIZE=512  # Make sure the DB is configured to handle what you set here, accounting for service replication and the management service's similar variable.
 
 # Only for SQLite database type, see at the top.
 DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migration in development mode
@@ -12,3 +13,4 @@ DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migra
 SERVICE_PORT=5001
 APIKEY=
 APIKEY_FILE=../../.secrets/apikey.states.txt    # if set, it overrides APIKEY.
+CACHE_TTL=1000  # Omit to always read state from the database. Can affect performance.
