--- a/docker-compose-local-pg.yml
+++ b/docker-compose-local-pg.yml
@@ -11,6 +11,7 @@ services:
 
   db:
     image: postgres:17.4-alpine
+    command: postgres -c max_connections=6000
     restart: always
     environment:
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
@@ -39,6 +40,7 @@ services:
       - DATABASE_NAME=plainflags
       - DATABASE_USER=plainflags
       - DATABASE_PASSWORD_FILE=/run/secrets/postgres_password
+      - DATABASE_POOL_SIZE=512
 
       - JWT_SIGNING_SECRET_FILE=/run/secrets/jwt_signing_secret
       - SERVICE_PORT=5000
@@ -63,9 +65,11 @@ services:
       - DATABASE_NAME=plainflags
       - DATABASE_USER=plainflags
       - DATABASE_PASSWORD_FILE=/run/secrets/postgres_password
+      - DATABASE_POOL_SIZE=512
 
       - SERVICE_PORT=5001
       - APIKEY_FILE=/run/secrets/apikey_states
+      - CACHE_TTL=1000
     secrets:
       - apikey_states
       - postgres_password
@@ -73,7 +77,7 @@ services:
       - flag-management
       - db
     deploy:
-      replicas: 3
+      replicas: 10
 
   flags-dashboard:
     build: ./dashboard
