--- a/docker-compose-pg.yml
+++ b/docker-compose-pg.yml
@@ -2,6 +2,7 @@ services:
 
   db:
     image: postgres:17.4-alpine
+    command: postgres -c max_connections=1024
     restart: always
     # set shared memory limit when using docker-compose
     # shm_size: 128mb
