--- a/services/flag-management/.env.template
+++ b/services/flag-management/.env.template
@@ -5,6 +5,7 @@ DATABASE_NAME=plainflags # PostgreSQL only
 DATABASE_USER=plainflags # PostgreSQL only
 DATABASE_PASSWORD= # PostgreSQL only
 DATABASE_PASSWORD_FILE=../../.secrets/password.pg.txt # If set, overrides DATABASE_PASSWORD.
+DATABASE_POOL_SIZE=512  # Make sure the DB is configured to handle all connections, including all required by the states service.
 
 # Only for SQLite database type, see at the top.
 DATA_FOLDER_PATH=../../data     # Be advised, changing this may break data migration in development mode
