--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -2,6 +2,30 @@
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "plain-flags-sdk"
+version = "1.0.0"
+description = "Python SDK for the Plain Flags free feature flag system"
+readme = "README.md"
+authors = [
+    {name = "Andrei Leonte", email = "andrei.leonte.dev@gmail.com"}
+]
+license = {text = "MIT"}
+requires-python = ">=3.6"
+dependencies = [
+    "aiohttp",
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+
+[project.urls]
+Homepage = "https://plainflags.dev"
+
 [tool.autopep8]
 max_line_length = 88
 aggressive = 1
