Dashboard authenticates with back end and sets the API URL

--- a/docker-compose-hub-pg.yml
+++ b/docker-compose-hub-pg.yml
@@ -53,12 +53,14 @@ services:
       - SUPERADMIN_PASSWORD_FILE=/run/secrets/superadmin_password
       - DEFAULT_USER_PASSWORD_FILE=/run/secrets/default_user_password
       - SUPERADMIN_EMAIL=boss@plainflags.com
+      - DASHBOARD_PASSKEY_FILE=/run/secrets/dashboard_passkey
     secrets:
       - jwt_signing_secret
       - superadmin_password
       - default_user_password
       - apikey_mgt
       - postgres_password
+      - dashboard_passkey
 
   flag-states:
     image: andreileonte011/plain-flags-states   # Uses latest. Add version tag for production usage.
@@ -106,6 +108,8 @@ secrets:
     file: ./.secrets/apikey.mgt.txt
   postgres_password:
     file: ./.secrets/password.pg.txt
+  dashboard_passkey:
+    file: ./.secrets/dashboard.passkey.txt
 
 volumes:
   pgdata:
