--- a/docker-compose-local-sqlite.yml
+++ b/docker-compose-local-sqlite.yml
@@ -21,11 +21,13 @@ services:
       - SUPERADMIN_PASSWORD_FILE=/run/secrets/superadmin_password
       - DEFAULT_USER_PASSWORD_FILE=/run/secrets/default_user_password
       - SUPERADMIN_EMAIL=boss@plainflags.com
+      - DASHBOARD_PASSKEY_FILE=/run/secrets/dashboard_passkey
     secrets:
       - jwt_signing_secret
       - superadmin_password
       - default_user_password
       - apikey_mgt
+      - dashboard_passkey
     volumes:
       - db-data:/data/:rw
 
@@ -63,6 +65,8 @@ secrets:
     file: ./.secrets/apikey.states.txt
   apikey_mgt:
     file: ./.secrets/apikey.mgt.txt
+  dashboard_passkey:
+    file: ./.secrets/dashboard.passkey.txt
 
 volumes:
   db-data:
