--- a/services/flag-management/.env.template
+++ b/services/flag-management/.env.template
@@ -22,3 +22,5 @@ SUPERADMIN_PASSWORD_FILE=../../.secrets/password.super.txt    # If set, it overr
 DEFAULT_USER_PASSWORD=
 DEFAULT_USER_PASSWORD_FILE=../../.secrets/password.user.txt    # If set, it overrides DEFAULT_USER_PASSWORD.
 # DISABLE_USER_REGISTRATION=true
+DASHBOARD_PASSKEY=
+DASHBOARD_PASSKEY_FILE=../../.secrets/dashboard.passkey.txt    # If set, it overrides DASHBOARD_PASSKEY.
