--- a/sdk/dart/pubspec.yaml
+++ b/sdk/dart/pubspec.yaml
@@ -2,7 +2,7 @@ name: plain_flags
 
 description: Dart SDK for the Plain Flags free feature flags system.
 
-version: 1.0.0-prerelease.3
+version: 1.0.0
 
 environment:
   sdk: ^3.8.1
