--- a/services/flag-management/package.json
+++ b/services/flag-management/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@2toad/profanity": "^3.2.0",
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
     "@types/ws": "^8.5.14",
