--- a/plainflags_app/pubspec.yaml
+++ b/plainflags_app/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.5.0
   flutter_secure_storage: ^9.2.4
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -21,7 +23,8 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.4
-  build_runner: ^2.10.1
+  build_runner: ^2.5.4
+  riverpod_generator: ^2.6.5
 
 flutter:
   uses-material-design: true
