--- a/plainflags_app/pubspec.yaml
+++ b/plainflags_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +26,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.4
   build_runner: ^2.5.4
   riverpod_generator: ^2.6.5
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
