--- a/plainflags_app/pubspec.yaml
+++ b/plainflags_app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   json_annotation: ^4.9.0
+  animated_list_plus: ^0.5.2
 
 dev_dependencies:
   flutter_test:
