--- a/plainflags_app/pubspec.yaml
+++ b/plainflags_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   json_annotation: ^4.9.0
   animated_list_plus: ^0.5.2
+  event_bus: ^2.0.1
 
 dev_dependencies:
   flutter_test:
