Data cleaning script and data SQL queries for populating demo tables

--- a/docker-compose-local-pg.yml
+++ b/docker-compose-local-pg.yml
@@ -50,6 +50,7 @@ services:
       - DEFAULT_USER_PASSWORD_FILE=/run/secrets/default_user_password
       - SUPERADMIN_EMAIL=boss@plainflags.com
       - DASHBOARD_PASSKEY_FILE=/run/secrets/dashboard_passkey
+      - DEMO_MODE=true
 
     secrets:
       - jwt_signing_secret
