Demo info on app bar

--- a/plainflags_app/pubspec.yaml
+++ b/plainflags_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_annotation: ^4.9.0
   animated_list_plus: ^0.5.2
   event_bus: ^2.0.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
