--- a/plainflags_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/plainflags_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = plainflags_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.plainflagsApp
+PRODUCT_BUNDLE_IDENTIFIER = dev.plainflags.app
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 Andrei Leonte. All rights reserved.
